// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`control.radio $ariaDetails 1`] = `
<wup-radio>
  <fieldset>
    <legend>
      <strong />
      <span
        class="wup-hidden"
      >
        Some details for screen-readers
      </span>
    </legend>
    <label
      for="txt2"
    >
      <input
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
</wup-radio>
`;

exports[`control.radio $ariaDetails 2`] = `
<wup-radio>
  <fieldset>
    <legend>
      <strong />
    </legend>
    <label
      for="txt2"
    >
      <input
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
</wup-radio>
`;

exports[`control.radio $ariaSpeak 1`] = `
<wup-radio>
  <fieldset>
    <legend>
      <strong />
    </legend>
    <label
      for="txt2"
    >
      <input
        aria-describedby="my-test-id txt6 my-test-id2"
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
  <section
    aria-atomic="true"
    aria-live="off"
    class="wup-hidden"
    id="txt6"
  >
    Hello
  </section>
</wup-radio>
`;

exports[`control.radio $ariaSpeak 2`] = `
<wup-radio>
  <fieldset>
    <legend>
      <strong />
    </legend>
    <label
      for="txt2"
    >
      <input
        aria-describedby="my-test-id my-test-id2"
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
</wup-radio>
`;

exports[`control.radio $show/$hide error 1`] = `
<wup-radio>
  <fieldset>
    <legend>
      <strong />
    </legend>
    <label
      for="txt2"
    >
      <input
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
</wup-radio>
`;

exports[`control.radio $show/$hide error 2`] = `
<wup-radio
  invalid=""
>
  <fieldset
    aria-describedby="txt6"
  >
    <legend>
      <strong />
    </legend>
    <label
      for="txt2"
    >
      <input
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt6"
    role="alert"
    style="opacity: 0;"
  >
    <span
      class="wup-hidden"
    />
    <span>
      Some custom message here
    </span>
  </wup-popup>
</wup-radio>
`;

exports[`control.radio $show/$hide error 3`] = `
<wup-radio>
  <fieldset>
    <legend>
      <strong />
    </legend>
    <label
      for="txt2"
    >
      <input
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
</wup-radio>
`;

exports[`control.radio base options readonly 1`] = `
<wup-radio
  readonly=""
>
  <fieldset>
    <legend>
      <strong />
      <span
        class="wup-hidden"
      >
        readonly
      </span>
    </legend>
    <label
      for="txt2"
    >
      <input
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
</wup-radio>
`;

exports[`control.radio base options readonly 2`] = `
<wup-radio>
  <fieldset>
    <legend>
      <strong />
    </legend>
    <label
      for="txt2"
    >
      <input
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
</wup-radio>
`;

exports[`control.radio common tests render + styles 1`] = `<wup-radio />`;

exports[`control.radio common tests render + styles 2`] = `
<style>
  .wup-hidden, [wup-hidden] {
position: absolute;
height:1px; width:1px;
top:0;left:0;
overflow:hidden;
clip:rect(1px,1px,1px,1px);
min-width:initial;
padding:0;}
  :root {
          --base-bg: #fff;
          --base-text: #232323;
          --base-focus: #00778d;
          --base-btn-bg: #009fbc;
          --base-btn-text: #fff;
          --base-btn-focus: #005766;
          --base-btn2-bg: var(--base-btn-text);
          --base-btn2-text: var(--base-btn-bg);
          --base-btn3-bg: var(--base-bg);
          --base-btn3-text: inherit;
          --base-sep: #e4e4e4;
          --border-radius: 6px;
          --anim-time: 200ms;
          --anim: var(--anim-time) cubic-bezier(0, 0, 0.2, 1) 0ms;
        }
  :root {
        --ctrl-padding: 1.5em 1em 0.5em 1em;
        --ctrl-focus: var(--base-focus);
        --ctrl-focus-label: var(--base-focus);
        --ctrl-selected: var(--ctrl-focus-label);
        --ctrl-label: #5e5e5e;
        --ctrl-icon: var(--ctrl-label);
        --ctrl-icon-size: 1em;
        --ctrl-bg: var(--base-bg);
        --ctrl-border: #e6e6e6;
        --ctrl-border-radius: var(--border-radius);
        --ctrl-err-text: #ad0000;
        --ctrl-err-bg: #fff4fa;
        --ctrl-err-icon-valid: green;
        --ctrl-invalid-border: red;
        --wup-icon-cross: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M674.515 93.949a45.925 45.925 0 0 0-65.022 0L384.001 318.981 158.509 93.487a45.928 45.928 0 0 0-65.022 0c-17.984 17.984-17.984 47.034 0 65.018l225.492 225.494L93.487 609.491c-17.984 17.984-17.984 47.034 0 65.018s47.034 17.984 65.018 0l225.492-225.492 225.492 225.492c17.984 17.984 47.034 17.984 65.018 0s17.984-47.034 0-65.018L449.015 383.999l225.492-225.494c17.521-17.521 17.521-47.034 0-64.559z'/%3E%3C/svg%3E");
        --wup-icon-check: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='768' height='768'%3E%3Cpath d='M37.691 450.599 224.76 635.864c21.528 21.32 56.11 21.425 77.478 0l428.035-426.23c21.47-21.38 21.425-56.11 0-77.478s-56.11-21.425-77.478 0L263.5 519.647 115.168 373.12c-21.555-21.293-56.108-21.425-77.478 0s-21.425 56.108 0 77.478z'/%3E%3C/svg%3E");
        --wup-icon-dot: url("data:image/svg+xml,%3Csvg viewBox='0 0 100 100' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='50' cy='50' r='20'/%3E%3C/svg%3E");
      }
  :root {
      --ctrl-radio-size: 1em;
      --ctrl-radio-spot-size: calc(var(--ctrl-radio-size) * 0.5);
      --ctrl-radio-bg: #fff;
      --ctrl-radio-off: #fff;
      --ctrl-radio-on: var(--ctrl-focus);
      --ctrl-radio-border: #0003;
      --ctrl-radio-border-size: 2px;
      --ctrl-radio-gap: 7px;
     }
  
      WUP-RADIO {
        contain: style;
        display: block;
        margin-bottom: 20px;
        box-shadow: 0 0 0 1px var(--ctrl-border);
        border-radius: var(--ctrl-border-radius);
        background: var(--ctrl-bg);
        cursor: pointer;
        -webkit-tap-highlight-color: transparent;
      }
      WUP-RADIO strong,
      WUP-RADIO legend {
        color: var(--ctrl-label);
        pointer-events: none;
      }
      WUP-RADIO:focus-within,
      WUP-RADIO:focus-within &gt; [menu] {
        z-index: 90010;
        box-shadow: 0 0 0 1px var(--ctrl-focus);
      }
      WUP-RADIO:focus-within strong,
      WUP-RADIO:focus-within legend {
        color: var(--ctrl-focus-label);
        pointer-events: initial;
      }
      [disabled] WUP-RADIO,
      WUP-RADIO[disabled] {
        opacity: 0.6;
        cursor: not-allowed;
        -webkit-user-select: none;
        user-select: none;
      }
      [disabled] WUP-RADIO &gt; *,
      WUP-RADIO[disabled] &gt; * {
        pointer-events: none;
      }
      WUP-RADIO[invalid],
      WUP-RADIO[invalid] &gt; [menu] {
        box-shadow: 0 0 3px 1px var(--ctrl-invalid-border);
      }
      WUP-RADIO label {
        display: flex;
        align-items: center;
        box-sizing: border-box;
        font: inherit;
        cursor: inherit;
        padding: var(--ctrl-padding);
        padding-top: 0;
        padding-bottom: 0;
      }
      WUP-RADIO input,
      WUP-RADIO textarea {
        padding: 0;
        margin: 0;
        cursor: inherit;
      }
      WUP-RADIO [contenteditable=true] {
        margin: var(--ctrl-padding);
        margin-left: 0;
        margin-right: 0;
        cursor: inherit;
      }
      WUP-RADIO strong {
        cursor: inherit;
      }
      WUP-RADIO strong:empty {
        display: none;
      }
      WUP-RADIO [aria-required="true"] + strong:after,
      WUP-RADIO fieldset[aria-required="true"] &gt; legend:after {
        content: "*";
        font-size: larger;
        font-weight: bolder;
        line-height: 0;
      }
      WUP-RADIO [error] {
        cursor: pointer;
        font-size: small;
        color: var(--ctrl-err-text);
        background: var(--ctrl-err-bg);
        max-height: 3em;
        overflow: auto;
        overflow: overlay;
      }
      WUP-RADIO [error] ul {
        margin:0; padding:2px 4px 2px;
      }
      WUP-RADIO [error] li {
        display: flex;
        align-items: center;
        margin-left: -5px;
      }
      WUP-RADIO [error] li:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-dot);
        --ctrl-icon: var(--ctrl-err-text);
        
display: inline-block;
width: var(--ctrl-icon-size);
min-height: var(--ctrl-icon-size);
box-sizing: content-box;
margin: 0;
padding: 5px;
flex: 0 0 auto;
align-self: stretch;
border: none;
box-shadow: none;
background: var(--ctrl-icon);
-webkit-mask-size: var(--ctrl-icon-size);
mask-size: var(--ctrl-icon-size);
-webkit-mask-repeat: no-repeat;
mask-repeat: no-repeat;
-webkit-mask-position: center;
mask-position: center;
-webkit-mask-image: var(--ctrl-icon-img);
mask-image: var(--ctrl-icon-img);
      }
      WUP-RADIO [error] li[valid] {
        color: var(--ctrl-err-icon-valid);
      }
      WUP-RADIO [error] li[valid]:before {
        content: '';
        --ctrl-icon-img: var(--wup-icon-check);
        --ctrl-icon: var(--ctrl-err-icon-valid);
      }
      WUP-RADIO:focus-within [error] {
        max-height: none;
      }
      @media (hover: hover) and (pointer: fine) {
        /*WUP-RADIO:hover {
          z-index: 90011;
        }
        WUP-RADIO:hover [error] {
          max-height: none;
        }*/
        WUP-RADIO:hover,
        WUP-RADIO:hover&gt;[menu],
        WUP-RADIO[hovered],
        WUP-RADIO[hovered]&gt;[menu] {
          box-shadow: 0 0 3px 1px var(--ctrl-focus);
        }
        WUP-RADIO[invalid]:hover,
        WUP-RADIO[invalid]:hover&gt;[menu],
        WUP-RADIO[invalid][hovered],
        WUP-RADIO[invalid][hovered]&gt;[menu] {
          box-shadow: 0 0 3px 1px var(--ctrl-invalid-border);
        }
      }
      WUP-RADIO {
        position: relative;
        padding: var(--ctrl-padding);
      }
      WUP-RADIO fieldset {
        border: none;
        padding: 0;
        margin: calc(var(--ctrl-radio-gap) * -0.5) calc(var(--ctrl-radio-gap) * -1);
        display: flex;
        flex-wrap: wrap;
      }
      WUP-RADIO legend {
        display: block;
        position: absolute;
        top: 0.2em;
        transform-origin: top left;
        transform: scale(0.9);
        margin: 0 var(--ctrl-radio-gap);
        padding: 0;
        box-sizing: border-box;
        max-width: 100%;
        text-overflow: ellipsis;
        overflow: hidden;
        white-space: nowrap;
        font-weight: normal;
        text-decoration: none;
      }
      WUP-RADIO strong {
        font: inherit;
      }
      WUP-RADIO label {
        padding: 0;
      }
      WUP-RADIO input {
position: absolute;
height:1px; width:1px;
top:0;left:0;
overflow:hidden;
clip:rect(1px,1px,1px,1px);
min-width:initial;
padding:0;}
      WUP-RADIO input + span {
        padding: var(--ctrl-radio-gap);
        display: inline-flex;
        align-items: center;
      }
      WUP-RADIO[readonly],
      WUP-RADIO[readonly] legend,
      WUP-RADIO[readonly] label {
         cursor: default;
      }
      WUP-RADIO input + span:after {
        content: "";
        width: var(--ctrl-radio-size);
        height: var(--ctrl-radio-size);
        border: calc((var(--ctrl-radio-size) - var(--ctrl-radio-spot-size)) / 2) solid var(--ctrl-radio-bg);
        box-sizing: border-box;
        background: var(--ctrl-radio-off);
        box-shadow: 0 0 1px var(--ctrl-radio-border-size) var(--ctrl-radio-border);
        border-radius: 50%;
        margin-left: 0.5em;
      }
      WUP-RADIO fieldset[aria-required="true"] input + span:after {
        content: "";
      }
      WUP-RADIO[reverse] input + span {
        flex-direction: row-reverse;
      }
      WUP-RADIO[reverse] input + span:after {
        margin-left: 0;
        margin-right: 0.5em;
      }
      WUP-RADIO input:checked + span:after {
        background-color: var(--ctrl-radio-on);
      }
      @media not all and (prefers-reduced-motion) {
        WUP-RADIO input + span:after {
          transition: background-color var(--anim);
        }
      }
      WUP-RADIO input:focus + span {
        color: var(--ctrl-selected);
      }
      WUP-RADIO input:focus + span:after {
         box-shadow: 0 0 1px var(--ctrl-radio-border-size) var(--ctrl-selected);
      }
      @media (hover: hover) and (pointer: fine) {
        WUP-RADIO input + span:hover {
          color: var(--ctrl-selected);
        }
        WUP-RADIO input + span:hover:after {
          box-shadow: 0 0 1px var(--ctrl-radio-border-size) var(--ctrl-selected);
        }
      }
     
</style>
`;

exports[`control.radio validations $options.validationShowAll 1`] = `
<wup-radio
  invalid=""
  required=""
>
  <fieldset
    aria-describedby="txt6"
    aria-required="true"
  >
    <legend>
      <strong />
    </legend>
    <label
      for="txt2"
    >
      <input
        aria-required="true"
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt6"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    />
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-radio>
`;

exports[`control.radio validations $options.validationShowAll 2`] = `
<wup-radio
  required=""
>
  <fieldset
    aria-required="true"
  >
    <legend>
      <strong />
    </legend>
    <label
      for="txt2"
    >
      <input
        aria-required="true"
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
</wup-radio>
`;

exports[`control.radio validations $options.validationShowAll 3`] = `
<wup-radio
  invalid=""
  required=""
>
  <fieldset
    aria-describedby="txt9"
    aria-required="true"
  >
    <legend>
      <strong>
        First Name
      </strong>
    </legend>
    <label
      for="txt2"
    >
      <input
        aria-required="true"
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt9"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Name:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-radio>
`;

exports[`control.radio validations options.validationCase 1`] = `
<wup-radio>
  <fieldset>
    <legend>
      <strong />
    </legend>
    <label
      for="txt2"
    >
      <input
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
</wup-radio>
`;

exports[`control.radio validations options.validationCase 2`] = `
<wup-radio
  invalid=""
  required=""
>
  <fieldset
    aria-describedby="txt7"
    aria-required="true"
  >
    <legend>
      <strong>
        First Input
      </strong>
    </legend>
    <label
      for="txt2"
    >
      <input
        aria-required="true"
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt7"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-radio>
`;

exports[`control.radio validations options.validationCase 3`] = `
<wup-radio
  invalid=""
  required=""
>
  <fieldset
    aria-describedby="txt8"
    aria-required="true"
  >
    <legend>
      <strong>
        First Input
      </strong>
    </legend>
    <label
      for="txt2"
    >
      <input
        aria-required="true"
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt8"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      custom err here
    </span>
  </wup-popup>
</wup-radio>
`;

exports[`control.radio validations options.validationCase 4`] = `
<wup-radio
  invalid=""
  required=""
>
  <fieldset
    aria-describedby="txt9"
    aria-required="true"
  >
    <legend>
      <strong>
        First Input
      </strong>
    </legend>
    <label
      for="txt2"
    >
      <input
        aria-required="true"
        autocomplete="off"
        id="txt2"
        name="txt1473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt3"
    >
      <input
        id="txt3"
        name="txt1473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt4"
    >
      <input
        id="txt4"
        name="txt1473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt5"
    >
      <input
        id="txt5"
        name="txt1473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
  <wup-popup
    aria-atomic="true"
    aria-live="off"
    error=""
    id="txt9"
    role="alert"
    style="display: none;"
  >
    <span
      class="wup-hidden"
    >
      Error for First Input:
    </span>
    <span>
      This field is required
    </span>
  </wup-popup>
</wup-radio>
`;

exports[`control.radio with form 1`] = `
<wup-form
  role="form"
>
  <wup-radio>
    <fieldset>
      <legend>
        <strong>
          First Input
        </strong>
      </legend>
      <label
        for="txt7"
      >
        <input
          autocomplete="off"
          id="txt7"
          name="txt6473"
          tabindex="0"
          type="radio"
        />
        <span>
          Donny
        </span>
      </label>
      <label
        for="txt8"
      >
        <input
          id="txt8"
          name="txt6473"
          type="radio"
        />
        <span>
          Mikky
        </span>
      </label>
      <label
        for="txt9"
      >
        <input
          id="txt9"
          name="txt6473"
          type="radio"
        />
        <span>
          Leo
        </span>
      </label>
      <label
        for="txt10"
      >
        <input
          id="txt10"
          name="txt6473"
          type="radio"
        />
        <span>
          Splinter
        </span>
      </label>
    </fieldset>
  </wup-radio>
</wup-form>
`;

exports[`control.radio with form 2`] = `
<wup-radio
  disabled=""
>
  <fieldset
    disabled=""
  >
    <legend>
      <strong>
        First Input
      </strong>
      <span
        class="wup-hidden"
      >
        readonly
      </span>
    </legend>
    <label
      for="txt7"
    >
      <input
        autocomplete="off"
        id="txt7"
        name="txt6473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt8"
    >
      <input
        id="txt8"
        name="txt6473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt9"
    >
      <input
        id="txt9"
        name="txt6473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt10"
    >
      <input
        id="txt10"
        name="txt6473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
</wup-radio>
`;

exports[`control.radio with form 3`] = `
<wup-radio
  disabled=""
>
  <fieldset
    disabled=""
  >
    <legend>
      <strong>
        First Input
      </strong>
    </legend>
    <label
      for="txt7"
    >
      <input
        autocomplete="off"
        id="txt7"
        name="txt6473"
        tabindex="0"
        type="radio"
      />
      <span>
        Donny
      </span>
    </label>
    <label
      for="txt8"
    >
      <input
        id="txt8"
        name="txt6473"
        type="radio"
      />
      <span>
        Mikky
      </span>
    </label>
    <label
      for="txt9"
    >
      <input
        id="txt9"
        name="txt6473"
        type="radio"
      />
      <span>
        Leo
      </span>
    </label>
    <label
      for="txt10"
    >
      <input
        id="txt10"
        name="txt6473"
        type="radio"
      />
      <span>
        Splinter
      </span>
    </label>
  </fieldset>
</wup-radio>
`;
